--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
     <h1>Asynchronous JavaScript</h1>
+    <!-- <script>
+     async function getWeatherAW(woeid) {
+            try {
+                const result = await fetch(`https://cors-anywhere.herokuapp.com/www.metaweather.com/api/location/${woeid}/`);
+                const data = await result.json();
+                const tomorrow = data.consolidated_weather[1];
+                console.log(`Temperatures tomorrow in ${data.title} stay between ${tomorrow.min_temp} and ${tomorrow.max_temp}.`);
+                return data;
+            } catch(error) {
+                alert(error);
+            }
+        }
+        getWeatherAW(2487956);
+    </script> -->
     
 </body>
 </html>
