--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Asynchronous JavaScript</h1>
-    <!-- <script>
+     <script>
      async function getWeatherAW(woeid) {
             try {
                 const result = await fetch(`https://cors-anywhere.herokuapp.com/www.metaweather.com/api/location/${woeid}/`);
@@ -22,7 +22,13 @@
             }
         }
         getWeatherAW(2487956);
-    </script> -->
+        
+        let dataLondon;
+        getWeatherAW(44418).then(data => {
+            dataLondon = data
+            console.log(dataLondon);
+        });
+    </script> 
     
 </body>
 </html>
